@startuml

title __GENERATORS's Class Diagram__\n

  namespace jovic.dragan.pj2.aerospace {
    namespace generators {
      class jovic.dragan.pj2.aerospace.generators.RandomPlaneGenerator {
          - constructorList : List<Constructor<?>>
          - random : Random
          + RandomPlaneGenerator()
          + getRandom()
          + registerNewConstructor()
      }
    }
  }
  

  namespace jovic.dragan.pj2.aerospace {
    namespace generators {
      class jovic.dragan.pj2.aerospace.generators.Spawner {
          - spawningThread : Thread
          + Spawner()
          + setPaused()
      }
    }
  }
  

  namespace jovic.dragan.pj2.aerospace {
    namespace generators {
      class jovic.dragan.pj2.aerospace.generators.SpawningRunnable {
          - paused : boolean
          - rng : Random
          - watcher : PreferenceWatcher<SimulatorPreferences>
          + SpawningRunnable()
          + run()
          + setPaused()
          - randomBetween()
          - randomObject()
      }
    }
  }
  

  jovic.dragan.pj2.aerospace.generators.Spawner o-- jovic.dragan.pj2.aerospace.generators.SpawningRunnable : spawningRunnable
  jovic.dragan.pj2.aerospace.generators.SpawningRunnable .up.|> java.lang.Runnable
  jovic.dragan.pj2.aerospace.generators.SpawningRunnable o-- jovic.dragan.pj2.aerospace.Aerospace : aerospace
  jovic.dragan.pj2.aerospace.generators.SpawningRunnable o-- jovic.dragan.pj2.preferences.SimulatorPreferences : preferences
  jovic.dragan.pj2.aerospace.generators.SpawningRunnable o-- jovic.dragan.pj2.aerospace.generators.RandomPlaneGenerator : rpg


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
